[WIP] Add copy methods and constructors